assets/css/workbench.less
/* Styling for the global workbench component, currently implemented
 * using golden-layout */

@import '~golden-layout/src/css/goldenlayout-base.css';
@import '~golden-layout/src/css/goldenlayout-light-theme.css';
@import '~react-flexible-workbench/themes/dark.css';

/* Make the panels scrollable */
body .lm_content {
  overflow-y: auto;
  background-color: white;
}

/* Fix the background color of the panel bodies and the tabs */
body .lm_header {
  .lm_tab {
    background-color: #ddd;
    &.lm_active {
      background-color: white;
    }
  }
}

/* Prevent selection in the panel titles */
.lm_title {
  user-select: none;
}

/* Settings button */
.lm_controls .lm_settings {
  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAkAAAAJCAYAAADgkQYQAAAAFUlEQVQY02NgGJzgPxTjZDMNQkcDAOi4Bf2rdMdGAAAAAElFTkSuQmCC);
}

/* Icon styling in workbench-related components */
.wb-icon {
  display: inline-block;
  position: relative;
  vertical-align: middle;
  width: 48px;
  height: 48px;
  padding: 12px;
  box-sizing: border-box;
}
.wb-module {
  padding: 0 !important;
}
.wb-module .wb-module-label {
  margin-right: 15px;
}

/* Horizontal separators in sidebar */
#sidebar hr {
  width: 100%;
  height: 1px;
  margin: 0.25em 0;
  border: none;
  background: #424242;
  box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.65);
}

/* Vertical separators in header */
#header-inner > hr {
  align-self: stretch;
  width: 1px;
  margin: 0 0.25em;
  border: none;
  background: #424242;
  box-shadow: -1px 0 4px rgba(0, 0, 0, 0.65);
}

.wb-modification-indicator {
  font-size: 10px;
  text-align: center;

  user-select: none;
}

